yaml/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tpm-frontend-ingress
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tpm-frontend
                port:
                  number: 3000
# kubectl get ingressclasses

# kubectl get ns
# go into the ingress nginx namespace that is created by ingress command
# ingress controller usually run in its own namespace
